logs/dag_id=spotify_etl_pipeline/run_id=manual__2025-09-15T14:08:09.171145+00:00/task_id=gold_transform/attempt=5.log
[2025-09-15T14:40:20.675+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T14:08:09.171145+00:00 [queued]>
[2025-09-15T14:40:20.681+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T14:08:09.171145+00:00 [queued]>
[2025-09-15T14:40:20.682+0000] {taskinstance.py:1361} INFO - Starting attempt 5 of 6
[2025-09-15T14:40:20.692+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_transform> on 2025-09-15 14:08:09.171145+00:00
[2025-09-15T14:40:20.697+0000] {standard_task_runner.py:57} INFO - Started process 8189 to run task
[2025-09-15T14:40:20.700+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_etl_pipeline', 'gold_transform', 'manual__2025-09-15T14:08:09.171145+00:00', '--job-id', '926', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmpa34xaci7']
[2025-09-15T14:40:20.702+0000] {standard_task_runner.py:85} INFO - Job 926: Subtask gold_transform
[2025-09-15T14:40:20.738+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T14:08:09.171145+00:00 [running]> on host 537418afed42
[2025-09-15T14:40:21.015+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-15T14:08:09.171145+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-15T14:08:09.171145+00:00'
[2025-09-15T14:40:21.021+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 14: );
         ^

[2025-09-15T14:40:21.030+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_etl_pipeline, task_id=gold_transform, execution_date=20250915T140809, start_date=20250915T144020, end_date=20250915T144021
[2025-09-15T14:40:21.038+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 926 for task gold_transform (syntax error at or near ")"
LINE 14: );
         ^
; 8189)
[2025-09-15T14:40:21.077+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-15T14:40:21.094+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
